# libRaptorQ

./: CMakeLists.txt  README
src/: Interleaver.hpp  Parameters.hpp  Rand.cpp  degree.hpp  deterministic.cpp  multiplication.hpp  table2.hpp
test/: rfc_test.cpp
